# backend

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  alembic.ini  deploy.sh  init_db.py  main.py  pyproject.toml  requirements.txt  routers.json  wrangler.toml
alembic/versions/: initial_migration.py
app/: config.py
app/apis/: __init__.py
app/apis/ai/: __init__.py
app/apis/analytics/: __init__.py
app/apis/auth/: __init__.py
app/apis/data/: __init__.py
app/apis/langflow/: __init__.py
app/apis/users/: __init__.py
app/apis/workflows/: __init__.py
app/cache/: config.py
app/celery/: config.py
app/database/: config.py  connection.py  init.py  models.py  operations.py  service.py
app/langflow/: config.py  service.py
app/langflow/flows/: customer_satisfaction_analysis.json  demand_forecasting.json  foot_traffic_analysis.json  menu_optimization.json  restaurant_analysis.json  staff_scheduling.json  supply_chain_optimization.json
app/langflow/templates/: foot_traffic_analysis.json  restaurant_analysis.json
app/logging/: config.py
app/middleware/: auth.py  cors.py  logging.py
app/models/: base.py
app/tasks/: ai.py  analytics.py  notifications.py
